--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,8 +16,8 @@
                     <div class="card shadow-2-strong" style="border-radius: 1rem;">
                         <div class="card-body p-5 text-center">
 
-                            <h3 class="mb-5">Sign Up</h3>
-                            <div class="container-fluid">
+                            <h3 class="mb-5">Log In</h3>
+                            <!-- <div class="container-fluid">
                                 {% with messages = get_flashed_messages(with_categories=true) %}
                                 {% if messages %}
                                 {% for category, message in messages %}
@@ -28,18 +28,9 @@
                                 {% endfor %}
                                 {% endif %}
                                 {% endwith %}
-                            </div>
+                            </div> -->
                             <form method="POST" action="">
                                 {{ form.hidden_tag() }}
-                                <div class="mb-3">
-                                    {{ form.username.label(class="form-label") }}
-                                    {{ form.username(class="form-control") }}
-                                    {% if form.username.errors %}
-                                        <div class="alert alert-danger" role="alert">
-                                            {{ form.username.errors[0] }}
-                                        </div>
-                                    {% endif %}
-                                </div>
                                 <div class="mb-3">
                                     {{ form.email.label(class="form-label") }}
                                     {{ form.email(class="form-control") }}
@@ -55,15 +46,6 @@
                                     {% if form.password.errors %}
                                         <div class="alert alert-danger" role="alert">
                                             {{ form.password.errors[0] }}
-                                        </div>
-                                    {% endif %}
-                                </div>
-                                <div class="mb-3">
-                                    {{ form.confirm_password.label(class="form-label") }}
-                                    {{ form.confirm_password(class="form-control") }}
-                                    {% if form.confirm_password.errors %}
-                                        <div class="alert alert-danger" role="alert">
-                                            {{ form.confirm_password.errors[0] }}
                                         </div>
                                     {% endif %}
                                 </div>
