--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -4,18 +4,6 @@
     <div class="card-body p-5 text-center">
 
         <h3 class="mb-5">Sign Up</h3>
-        <div class="container-fluid">
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                {{ message }}
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
-        </div>
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <div class="mb-3">
@@ -53,6 +41,18 @@
                         {{ form.confirm_password.errors[0] }}
                     </div>
                 {% endif %}
+            </div>
+            <div class="mb-3">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+                {% endif %}
+                {% endwith %}
             </div>
             <div class="mb-3">
                 {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
