--- a/app/templates/user/base_user.html
+++ b/app/templates/user/base_user.html
@@ -8,20 +8,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <header>
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid m-4">
-            <a class="navbar-brand" href="/">
-                <img src="../../static/img/logo.png" alt="Logo" style="height: 40px;"><span style= "color: black; padding-left: 1em;">SURVEY STREAM</span>
-            </a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index"><img src="../../static/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top me-2">Survay Stream</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="btn btn-outline-success me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-success ms-lg-2 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="register">Sign Up</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 </header>
+
+
 <body>
-    <section class="vh-100" style="background-color: #6daf5f;">
+    <section class="vh-100" style="background-color: #a6da9c;">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                    {% block content %}{% endblock %}
+                    <div class="mt-3">
+                        {% block content %}{% endblock %}
+                    </div>
                 </div>
             </div>
         </div>
