--- a/app/static/style/intro.css
+++ b/app/static/style/intro.css
@@ -20,8 +20,12 @@ body, html {
     background-color: #00bf6f;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     cursor: pointer;
+    font-weight: bold; 
+    font-size: 16px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2); 
+    transition: background-color 0.3s, box-shadow 0.3s;  
 }
 
 .main-content {
