--- a/app/templates/survey/MyAccount.html
+++ b/app/templates/survey/MyAccount.html
@@ -93,8 +93,8 @@
 </head>
 <body>
 <div class="sidebar bg-light">
-    <a href="MySurvey.html"><i class="bi bi-journal-text icon"></i>My Surveys</a>
-    <a href="MyAccount.html"><i class="bi bi-heart icon"></i>My Account</a>
+    <a href="mySurveys.html"><i class="bi bi-journal-text icon"></i>My Surveys</a>
+    <a href="myAccount.html"><i class="bi bi-heart icon"></i>My Account</a>
     <a href="Setting.html"><i class="bi bi-trash icon"></i>Setting</a>
 </div>
 
