--- a/app/templates/survey/MyAccount.html
+++ b/app/templates/survey/MyAccount.html
@@ -61,20 +61,23 @@
             border-radius: 10px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             text-align: center;
-            margin-left: 280px;
+            margin-left: 260px;
             padding: 20px;
             margin-top: 50px;
-            transition: margin-left 0.3s; 
+            transition: margin-left 0.3s;
+            width: calc(100% - 280px); 
     }
 
     @media (max-width: 768px) {
             .sidebar {
                 width: 100%; 
                 height: auto; 
+                position: relative;
             }
 
             .container {
                 margin-left: 0; 
+                width: 100%;
             }
     }
     .readonly-input {
@@ -82,20 +85,20 @@
         color: #495057; 
     }
     .img-fluid.rounded-circle {
-        width: 150px;  /* Set a fixed width */
-        height: 150px; /* Set a fixed height to maintain the aspect ratio */
-        object-fit: contain; /* This allows smaller images to be scaled up without cropping */
+        width: 150px;  
+        height: 150px; 
+        object-fit: contain; 
         border-radius: 50%;
-        border: 2px solid #dee2e6;/* This ensures the image covers the area without being distorted */
+        border: 2px solid #dee2e6;
     }
- 
+
 </style>
 </head>
 <body>
 <div class="sidebar bg-light">
     <a href="mySurveys.html"><i class="bi bi-journal-text icon"></i>My Surveys</a>
     <a href="myAccount.html"><i class="bi bi-heart icon"></i>My Account</a>
-    <a href="Setting.html"><i class="bi bi-trash icon"></i>Setting</a>
+    <a href="Setting.html"><i class="bi bi-gear icon"></i>Setting</a>
 </div>
 
 <div class="container d-flex flex-column align-items-center p-4">
