--- a/app/templates/survey/MySurveys.html
+++ b/app/templates/survey/MySurveys.html
@@ -55,7 +55,7 @@
 <div class="sidebar bg-light">
     <a href="MySurvey.html"><i class="bi bi-journal-text icon"></i>My Surveys</a>
     <a href="MyAccount.html"><i class="bi bi-heart icon"></i>My Account</a>
-    <a href="Setting.html"><i class="bi bi-trash icon"></i>Setting</a>
+    <a href="Setting.html"><i class="bi bi-gear icon"></i>Setting</a>
 </div>
 
 <div class="content">
