--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -38,6 +38,10 @@
             <div class="mb-3">
                 {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
             </div>
+            <div class="mb-3">
+                <a href="{{ url_for('register') }}">Sign Up</a><br>
+                <a href="{{ url_for('reset_password') }}">Forget Password?</a>
+            </div>
         </form>
     </div>
 </div>
