--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -57,6 +57,9 @@
             <div class="mb-3">
                 {{ form.submit(class="btn btn-primary btn-lg btn-block") }}
             </div>
+            <div class="mb-3">
+                <a href="{{ url_for('login') }}">Already have a account?</a>
+            </div>
         </form>
     </div>
 </div>
