--- a/app/templates/survey/create_survey.html
+++ b/app/templates/survey/create_survey.html
@@ -6,36 +6,47 @@
     <title>Create Survey</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="container mt-4">
-        <h2>Create a New Survey</h2>
-        <form method="POST" action="{{ url_for('create_survey') }}" id="survey-form">
-            {{ form.hidden_tag() }}
-            <div class="mb-3">
-                {{ form.title.label(class="form-label") }}
-                {{ form.title(class="form-control") }}
+        <div class="card">
+            <div class="card-body">
+                <h2>Create a New Survey</h2>
+                <form method="POST" action="{{ url_for('create_survey') }}" id="survey-form">
+                    {{ form.hidden_tag() }}
+                    <div class="mb-3">
+                        {{ form.title.label(class="form-label") }}
+                        {{ form.title(class="form-control") }}
+                    </div>
+                    <div class="mb-3">
+                        {{ form.description.label(class="form-label") }}
+                        {{ form.description(class="form-control") }}
+                    </div>
+                    <div id="questionsContainer"></div>
+                    <button type="button" onclick="addQuestion()">Add Question</button>
+                    <p>{{ form.submit(class="btn") }}</p>
+                </form>
             </div>
-            <div class="mb-3">
-                {{ form.description.label(class="form-label") }}
-                {{ form.description(class="form-control") }}
-            </div>
-            <div id="questionsContainer"></div>
-            <button type="button" onclick="addQuestion()">Add Question</button>
-            <p>{{ form.submit() }}</p>
-        </form>
-    
+        </div>
         <script>
             function addQuestion() {
                 var questionId = $('#questionsContainer .question').length + 1;
                 $('#questionsContainer').append(`
                     <div class="question" id="question${questionId}">
-                        <label for="question${questionId}">Question ${questionId}</label>
-                        <input type="text" name="question${questionId}" placeholder="Enter your question">
-                        <div class="optionsContainer" id="optionsContainer${questionId}"></div>
-                        <button type="button" onclick="addOption(${questionId})">Add Option</button>
-                        <button type="button" id="removeLastOption${questionId}" onclick="removeLastOption(${questionId})" disabled>Remove Last Option</button>
-                        <button type="button" onclick="removeQuestion(${questionId})">Remove Question</button>
+                        <div class="card mt-2">
+                            <div class="card-body">
+                                <label class="form-label" for="question${questionId}"><strong>Question${questionId}</strong></label>
+                                <input class="form-control" type="text" name="question${questionId}" placeholder="Enter your question">
+                                <div class="optionsContainer" id="optionsContainer${questionId}"></div>
+                                <div class="btn-group">
+                                    <button class="btn btn-success" type="button" onclick="addOption(${questionId})">Add Option</button>
+                                    <button class="btn btn-danger" type="button" id="removeLastOption${questionId}" onclick="removeLastOption(${questionId})" disabled>Remove Last Option</button>
+                                    <button class="btn btn-danger" type="button" onclick="removeQuestion(${questionId})">Remove Question</button>
+                                </div>
+                                
+                            </div>
+                        </div>
                     </div>
                 `);
                 addOption(questionId); // Add first default option
@@ -47,8 +58,10 @@
                 var optionId = $(`#optionsContainer${questionId} .option`).length + 1;
                 $(`#optionsContainer${questionId}`).append(`
                     <div class="option" id="option${questionId}_${optionId}">
-                        <label for="option${questionId}_${optionId}">Option ${optionId}</label>
-                        <input type="text" name="option${questionId}_${optionId}" placeholder="Enter option text">
+                        <div class = "container mt-3">
+                            <label class="form-label" for="option${questionId}_${optionId}">Option ${optionId}</label>
+                            <input class="form-control" type="text" name="option${questionId}_${optionId}" placeholder="Enter option text">
+                        </div>
                     </div>
                 `);
                 updateRemoveButtonState(questionId);
