--- a/app/templates/survey/create_survey.html
+++ b/app/templates/survey/create_survey.html
@@ -20,6 +20,10 @@
                         {{ form.title(class="form-control") }}
                     </div>
                     <div class="mb-3">
+                        {{ form.surveyType.label(class="form-label") }}
+                        {{ form.surveyType(class="form-control") }}
+                    </div>
+                    <div class="mb-3">
                         {{ form.description.label(class="form-label") }}
                         {{ form.description(class="form-control") }}
                     </div>
