--- a/app/static/style/ranking.css
+++ b/app/static/style/ranking.css
@@ -87,6 +87,10 @@ td {
     margin-top: 10px;
     font-size: 16px;
     color: #666;  /* Slightly muted color for less emphasis */
+    border: 2px dashed #cccccc; /* Adding dashed border */
+    padding: 10px; /* Adding padding inside the border */
+    border-radius: 10px; /* Adding border radius for rounded corners */
+    background-color: #f9f9f9; /* Light background color */
 }
 
 .avatar {
