--- a/app/templates/navbar/navSidebar.html
+++ b/app/templates/navbar/navSidebar.html
@@ -59,6 +59,18 @@
 
         <div class="main p-3">
             <div class="text-center">
+                <div class="mb-3">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+                    {% endwith %}
+                </div>
                 {% block content %}{% endblock %}
             </div>
         </div>
