Completed leaderboard page with connecting it to backend data

--- a/app/templates/survey/survey_dashboard.html
+++ b/app/templates/survey/survey_dashboard.html
@@ -1,4 +1,5 @@
 {% extends "navbar/navbar.html" %}
+{% set visible=True %}
 {% block content %}
 <div class="container mt-3">
     <!-- Search Bar -->
