--- a/app/templates/navbar/navbar.html
+++ b/app/templates/navbar/navbar.html
@@ -7,9 +7,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     {% block extra_css %}{% endblock %}
+    <style>
+        @media (max-width: 992px){
+            .navbar {
+                background-color: rgba(255, 255, 255, 0.9);
+            }
+            .navbar-collapse{
+                background-color: rgba(255, 255, 255, 0.9);
+            }
+        }
+        
+    </style>
 </head>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light {% if visible %} bg-light {% endif %} fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="index"><img src="../../static/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top me-2">Survay Stream</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#niceNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,10 +38,10 @@
                         <a class="nav-link" href="{{ url_for('create_survey') }}">Create Survey</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Leaderboard</a>
+                        <a class="nav-link" href="{{ url_for('leaderboard') }}">Leaderboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About us</a>
+                        <a class="nav-link" href="{{ url_for('about_us') }}">About us</a>
                     </li>
                 </ul>
 
@@ -39,8 +50,8 @@
                         <li class="nav-item dropdown">
                             <a class="btn btn-outline-success dropdown-toggle me-lg-2 mb-2 mb-lg-0 d-block d-lg-inline-block w-100 w-lg-auto text-center" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" >Hello, {{ current_user.username }}</a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">My Surveys</a></li>
-                                <li><a class="dropdown-item" href="#">My Account</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('my_survey', user_id = current_user.id) }}">My Surveys</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('update_profile', user_id = current_user.id) }}">My Account</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a></li>
                             </ul>
                         </li>
