--- a/app/templates/ranking.html
+++ b/app/templates/ranking.html
@@ -1,90 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaderboard</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/style/ranking.css">
-    <script src="../static/js/ranking.js" defer></script>
-</head>
-<body>
-    <div class="content container">
-        <h1>Leaderboard</h1>
-        <p class="current-rank">🏆 You are currently ranked 1st 🏆</p>
-        <div class="table-responsive">
-            <table id="leaderboard" class="table table-hover table-bordered shadow rounded-3 list__table">
-                <thead>
-                    <tr class="list__header">
-                        <th>Rank</th>
-                        <th>Username</th>
-                        <th>Score</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Displaying top 10 users with avatars -->
-                    <tr class="list__row">
-                        <td class="list__cell"><strong>1🏅</strong></td>
-                        <td class="list__cell"><img src="https://via.placeholder.com/40" alt="User1's Avatar" class="avatar"> User1</td>
-                        <td class="list__cell">1234</td>
-                    </tr>
-                    <tr class="list__row">
-                        <td class="list__cell"><strong>2🥈</strong></td>
-                        <td class="list__cell"><img src="https://via.placeholder.com/40" alt="User2's Avatar" class="avatar"> User2</td>
-                        <td class="list__cell">1200</td>
-                    </tr>
-                    <tr class="list__row">
-                        <td class="list__cell"><strong>3🥉</strong></td>
-                        <td class="list__cell"><img src="https://via.placeholder.com/40" alt="User3's Avatar" class="avatar"> User3</td>
-                        <td class="list__cell">1150</td>
-                    </tr>
-                    <tr class="list__row">
-                        <td class="list__cell">4</td>
-                        <td class="list__cell"><img src="https://via.placeholder.com/40" alt="User4's Avatar" class="avatar"> User4</td>
-                        <td class="list__cell">1100</td>
-                    </tr>
-                    <tr class="list__row">
-                        <td class="list__cell">5</td>
-                        <td class="list__cell"><img src="https://via.placeholder.com/40" alt="User5's Avatar" class="avatar"> User5</td>
-                        <td class="list__cell">1050</td>
-                    </tr>
-                    <tr class="list__row">
-                        <td class="list__cell">6</td>
-                        <td class="list__cell"><img src="https://via.placeholder.com/40" alt="User6's Avatar" class="avatar"> User6</td>
-                        <td class="list__cell">1000</td>
-                    </tr>
-                    <tr class="list__row">
-                        <td class="list__cell">7</td>
-                        <td class="list__cell"><img src="https://via.placeholder.com/40" alt="User7's Avatar" class="avatar"> User7</td>
-                        <td class="list__cell">950</td>
-                    </tr>
-                    <tr class="list__row">
-                        <td class="list__cell">8</td>
-                        <td class="list__cell"><img src="https://via.placeholder.com/40" alt="User8's Avatar" class="avatar"> User8</td>
-                        <td class="list__cell">900</td>
-                    </tr>
-                    <tr class="list__row">
-                        <td class="list__cell">9</td>
-                        <td class="list__cell"><img src="https://via.placeholder.com/40" alt="User9's Avatar" class="avatar"> User9</td>
-                        <td class="list__cell">850</td>
-                    </tr>
-                    <tr class="list__row">
-                        <td class="list__cell">10</td>
-                        <td class="list__cell"><img src="https://via.placeholder.com/40" alt="User10's Avatar" class="avatar"> User10</td>
-                        <td class="list__cell">800</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <button onclick="location.href='/otherforms'" class="circle-button">Get More Points ⭐️</button>
-        <div class="panel">
-            <h2 class="criteria-title">Ranking Criteria</h2><br>
-            <p>Our ranking system is designed to recognize and reward active participation within our community. Here's how you can earn points:
-                Submit Surveys: Earn 5 points for each survey you publish.
-                Complete Surveys: Earn 2 points for each survey you complete for others.
-                Your total score is calculated based on these actions, allowing you to climb the leaderboard and showcase your contribution to the community.</p><br>
-        </div>
+{% extends 'navbar/navbar.html' %}
+
+{% block extra_css%}
+<link rel="stylesheet" href="../static/style/ranking.css">
+{% endblock %}
+
+{% set visible=True %}
+
+{% block extra_js %}
+<script src="../static/js/ranking.js" defer></script>
+{% endblock %}
+
+{% block content %}
+<div class="content container">
+    <h1>Leaderboard</h1>
+    {% if current_user.is_authenticated %}
+    <p class="current-rank">🏆 Your current Score is <strong>{{ current_user.point }}</strong> 🏆</p>
+    {% else %}
+    <p class="current-rank mt-3">🏆 <a class="btn btn-outline-primary" href="{{url_for('login')}}">Join Us Now!!</a> 🏆</p>
+    {% endif %}
+    <div class="table-responsive">
+        <table id="leaderboard" class="table table-hover table-bordered shadow rounded-3 list__table">
+            <thead>
+                <tr class="list__header">
+                    <th>Rank</th>
+                    <th>Username</th>
+                    <th>Score</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in top10 %}
+                <tr class="list__row">
+                    <td class="list__cell"><strong>
+                        {% if loop.index == 1 %}
+                            {{ loop.index }} <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trophy-fill" viewBox="0 0 16 16">
+                                <path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5q0 .807-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33 33 0 0 1 2.5.5m.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935m10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935"/>
+                              </svg>
+                        {% elif loop.index == 2 %}
+                            {{ loop.index }} <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trophy-fill" viewBox="0 0 16 16">
+                                <path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5q0 .807-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33 33 0 0 1 2.5.5m.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935m10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935"/>
+                              </svg>
+                        {% elif loop.index == 3 %}
+                            {{ loop.index }} <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trophy-fill" viewBox="0 0 16 16">
+                                <path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5q0 .807-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33 33 0 0 1 2.5.5m.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935m10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935"/>
+                              </svg>
+                        {% else %}
+                            {{ loop.index }}
+                        {% endif %}
+                    </strong></td>
+                    <td class="list__cell"><img src="{{ url_for('static', filename=user.profilePic) }}" alt="User1's Avatar" class="avatar"> {{user.username}}</td>
+                    <td class="list__cell">{{user.point}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+    <button onclick="location.href='/otherforms'" class="circle-button">Get More Points ⭐️</button>
+    <div class="panel">
+        <h2 class="criteria-title">Ranking Criteria</h2><br>
+        <p>Our ranking system is designed to recognize and reward active participation within our community. Here's how you can earn points:
+            Submit Surveys: Earn 5 points for each survey you publish.
+            Complete Surveys: Earn 2 points for each survey you complete for others.
+            Your total score is calculated based on these actions, allowing you to climb the leaderboard and showcase your contribution to the community.</p><br>
+    </div>
+</div>
+{% endblock %}
