changed the email address for the about us page

--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -39,7 +39,7 @@
             <p>If you encounter any problems, you can contact us through the following ways and we will help you solve them as soon as possible.</p>
             <!-- Add button -->
             <div class="email-button-container">
-                <button class="email-button" onclick="copyEmail()"><i class="fas fa-envelope"></i> support@survey.com</button>
+                <button class="email-button" onclick="copyEmail()"><i class="fas fa-envelope"></i> surveystream10@gmail.com</button>
             </div>
         </div>
     </div>
