Modify title on tab for all pages

--- a/app/templates/survey/survey_dashboard.html
+++ b/app/templates/survey/survey_dashboard.html
@@ -1,4 +1,5 @@
 {% extends "navbar/navbar.html" %}
+{% block title %} Survey Dashboard {% endblock %}
 {% set visible=True %}
 {% block content %}
 <div class="container mt-3">
