--- a/app/templates/survey/survey_result.html
+++ b/app/templates/survey/survey_result.html
@@ -1,4 +1,5 @@
 {% extends 'navbar/navSidebar.html' %}
+{% block title %} Survey Result {% endblock %}
 {% block content %}
 <div class="content">
     <h2>Survey Result</h2>
