--- a/app/templates/user/change_password.html
+++ b/app/templates/user/change_password.html
@@ -1,4 +1,5 @@
 {% extends 'navbar/navSidebar.html' %}
+{% block title %} Change Password {% endblock %}
 {% block content %}
 <div class="card shadow-2-strong" style="border-radius: 1rem;">
     <div class="card-body p-5 text-center">
