--- a/app/templates/user/reset_password.html
+++ b/app/templates/user/reset_password.html
@@ -1,4 +1,5 @@
 {% extends 'user/base_user.html' %}
+{% block title %} Reset Password {% endblock %}
 {% block content %}
 <div class="card shadow-2-strong" style="border-radius: 1rem;">
     <div class="card-body p-5 text-center">
