--- a/app/templates/survey/my_surveys.html
+++ b/app/templates/survey/my_surveys.html
@@ -1,4 +1,5 @@
 {% extends 'navbar/navSidebar.html' %}
+{% block title %} My Surveys {% endblock %}
 {% block content %}
 <body>
 <div class="content">
