--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -1,4 +1,5 @@
 {% extends 'user/base_user.html' %}
+{% block title %} Sign Up {% endblock %}
 {% block content %}
 <div class="card shadow-lg" style="border-radius: 1rem;">
     <div class="card-body p-5 text-center">
