--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="content">
-  <h1>About Website</h1>
+  <h1>About Us</h1>
   <div class="grid">
     <!-- Card 1 - Our Goal -->
     <div class="card flex-row">
@@ -45,7 +45,9 @@
     <div class="card">
         <div class="card-content">
             <h3>Contact Us</h3>
-            <p>If you encounter any problems, you can contact us through the following ways and we will help you solve them as soon as possible.</p>
+            <div class="contact-us"
+              <p>If you encounter any problems, you can contact us through the following ways and we will help you solve them as soon as possible.</p>
+            </div>
             <!-- Add button -->
             <div class="email-button-container">
                 <button class="email-button" onclick="copyEmail()"><i class="fas fa-envelope"></i> support@survey.com</button>
